--- a/style.css
+++ b/style.css
@@ -1,6 +1,28 @@
+body {
+    text-align: center;
+}
+
+div#container {
+    margin-top: 50px;
+    display: inline-block;
+    text-align: left;
+}
+
 span.cell {
     border: 1px solid black;
     display: inline-block;
-    width: 30px;
-    height: 30px;
+    width: 50px;
+    height: 50px;
+}
+
+span.miss {
+    background-color: blue;
+}
+
+span.hit {
+    background-color: red;
+}
+
+input#displayID {
+    width: 20px;
 }
